fixed the overflow problem

--- a/app/assets/sass/module/cluster.sass
+++ b/app/assets/sass/module/cluster.sass
@@ -6,7 +6,6 @@
   min-height: 100px
   box-sizing: border-box
   padding: 10px 10px 0 10px
-  border-bottom: 2px solid Blue
 
 .panel
   width: inherit
